3.0905
 - Mod: Gratch now more granualar for infiltration times when damaged
 - Mod: If planet is abandoned, spies from elsewhere will be set to Idle when ported home.
 - Fix: Removed any possibility of inter-alliance voting.
 - API: map/get_stars is no longer supported. use map/get_star_map instead
 - API: map/get_star_map changed to show alliance influence, not station
 - Mod: Space Stations influence is now automatic
 - Mod: Stars are now held by the Alliance, not the Space Station
 - Mod: Enemy Space Stations can 'negate' influence on a star
 - Mod: Stars with at least 50% net influence are automatically seized
 - Mod: A new alliance influence map is created daily.
 - Mod: Influence and range of an SS is now affected by building damage.

3.0904:
 - Fix: Removed cronic duplication in starmap API, hopefully reducing lag

3.0903:
 - Fix: Have spies set on propaganda start work immediately.
 - Fix: Stakes no longer go into Members Only Colony Space.
 - Fix: Crater gets cleared if AI is out of space.
 - Fix: Get first 100 spies via prepare_send or fetch that are available.
 - Mod: Oracle of Anid schedules recalculation after a period of work instead of immediately.

3.0902:
 - Add: Jackpot AI
 - Fix: Idle spies that hit max training on check.
 - Fix: Seizing in Neutral Area fails if passed. (Thanks RO)
 - Add: Custom message for upgrades in code.  (so far, just bleeders. Thanks Tower)
 - Fix: No shortcuts via the forbidden zone.
 - Fix: Recalled ships ignore fleet speed.
 - Fix: Snarks splash damage now splash as advertised.

3.0901:
 - API: Spaceport ship filter includes all relevant tasks.
 - Fix: Parliament actually looks at leader's embassy for max members.
 - Mod: Saben, Diablotin, Cult get some timing changes.

3.0900:
 - Fix: Gratch's Gauntlet on repair, checks spies current status.
 - Mod: Redid Political Propaganda as a constant task.
 - Mod: Cult less effective against planets running propaganda campaigns.